# course_work_3

./: .gitignore  README.md  config.py  main.py  pyproject.toml  run.py  transaction.py  utils.py
data/: test_operations.json
tests/: conftest.py  test_operations.json  test_transaction.py  test_utils.py
tests/data_test/: test_operations.json
