[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = "Виджет, который показывает несколько последних успешных банковских операций клиента"
authors = ["di-m-dy <dimdy11.11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
